@@ -9,4 +9,5 @@
 #VERSION=('1.4.0','26/12/2015','feat: Update for paging and small style updates.')
 #VERSION=('1.5.0','28/12/2015','feat: Update to Django 1.9 from 1.7')
 #VERSION=('1.5.1','29/12/2015','feat: Add password management features')
-VERSION=('1.5.2','19/01/2016','feat: Fix logout issue with non-admin users')
+#VERSION=('1.5.2','19/01/2016','feat: Fix logout issue with non-admin users')
+VERSION=('1.5.3','21/01/2016','Remove display of warehouse location from product information')
