@@ -46,7 +46,7 @@ def get_secret(setting, secrets=secrets):
 PICTURE_SIZE = 600
 THUMBNAIL_SIZE = 90
 PAGE_SIZE = 20
-PRODUCT_INFORMATION_FORM_ADDED_FIELDS = ['warehouseLocation',
+PRODUCT_INFORMATION_FORM_ADDED_FIELDS = [
                 'canExpire', 'expirationDate', 'expirationNotes', 'costPerItem',
                 'picture']
 
