@@ -25,3 +25,5 @@ NOTE!! Messed up git commit of v1.5.0.  Most of it ended up --amend'ed to v1.4.0
 * ab3c960 feat: Add password management features
 01/19/2016 Version 1.5.2:
 * 169bddd (HEAD, master) fix: Issue with logging out for non-admin users
+01/21/2016 Version 1.5.3:
+* d4cacd3 (HEAD, master) feat: Remove display of warehouse location from product information
